[UPD] structure mobile

--- a/index.html
+++ b/index.html
@@ -7,14 +7,98 @@
     <title>Responsive Layout</title>
 </head>
 <body>
+
     <header>
-
+        <div class="bg-blue d-flex justify-between">
+            <div>Logo</div>
+            <div>Menu</div>
+        </div>
     </header>
-    <main>
 
+    <main>
+        <div id="jumbotron">
+            <div class="container">
+                <div class="row">
+                    <div class="big-col bg-lightblue height-800">
+                        <div class="testo bg-red"></div>
+                        <div class="img bg-red"></div>
+                    </div>
+                    <div class="col bg-lightblue height-400"></div>
+                    <div class="col bg-lightblue height-400"></div>
+                    <div class="col bg-lightblue height-400"></div>
+                    <div class="col bg-lightblue height-400"></div>
+                </div>
+            </div>
+        </div>
+        <div id="planning" class="bg-violet">
+            <div class="container">
+                <div class="row">
+                    <div class="col bg-white height-800">
+                        <div class="strategic-planning height-400"></div>
+                    </div>
+                    <div class="col bg-white height-400">
+                        <div class="app-development"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="testimonials">
+            <div class="container">
+                <div class="row">
+                    <div class="col bg-violet height-600"></div>
+                    <div class="col bg-violet height-600">
+                        <div class="testo bg-red"></div>
+                        <div class="img bg-red"></div>
+                    </div>
+                    <div class="col bg-violet height-600">
+                        <div class="testo bg-red"></div>
+                        <div class="img bg-red"></div>
+                    </div>
+                    <div class="col bg-violet height-600">
+                        <div class="testo bg-red"></div>
+                        <div class="img bg-red"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="benefits" class="bg-violet">
+            <div class="container">
+                <div class="row">
+                    <div class="col-title">
+                        <h3>Benefits</h3>
+                    </div>
+                    <div class="col bg-white height-400"></div>
+                    <div class="col bg-white height-400"></div>
+                    <div class="col bg-white height-400"></div>
+                    <div class="col bg-white height-400"></div>
+                    <div class="col bg-white height-400"></div>
+                    <div class="col bg-white height-400"></div>
+                </div>
+            </div>
+        </div>
+        <div id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col height-800 bg-red"></div>
+                    <div class="col height-400 bg-red"></div>
+                </div>
+            </div>
+        </div>
+        <div id="get-started" class="bg-violet">
+            <div class="sm-container">
+                <div class="row">
+                    <div class="col bg-white height-800"></div>
+                </div>
+            </div>
+        </div>
     </main>
-    <footer>
-        
+
+    <footer class="bg-gray">
+        <div class="sm-container">
+            <div class="row">
+                <div class="col bg-white height-600"></div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
