[UPD] structure tablet

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div id="jumbotron">
             <div class="container">
                 <div class="row">
-                    <div class="big-col bg-lightblue height-800">
-                        <div class="testo bg-red"></div>
-                        <div class="img bg-red"></div>
+                    <div class="big-col bg-lightblue">
+                        <div class="testo bg-red height-400"></div>
+                        <div class="img bg-red height-400"></div>
                     </div>
                     <div class="col bg-lightblue height-400"></div>
                     <div class="col bg-lightblue height-400"></div>
@@ -47,16 +47,16 @@
                 <div class="row">
                     <div class="col bg-violet height-600"></div>
                     <div class="col bg-violet height-600">
-                        <div class="testo bg-red"></div>
                         <div class="img bg-red"></div>
+                        <div class="testo bg-red"></div>
                     </div>
                     <div class="col bg-violet height-600">
-                        <div class="testo bg-red"></div>
                         <div class="img bg-red"></div>
+                        <div class="testo bg-red"></div>
                     </div>
                     <div class="col bg-violet height-600">
-                        <div class="testo bg-red"></div>
                         <div class="img bg-red"></div>
+                        <div class="testo bg-red"></div>
                     </div>
                 </div>
             </div>
@@ -79,8 +79,12 @@
         <div id="about">
             <div class="container">
                 <div class="row">
-                    <div class="col height-800 bg-red"></div>
-                    <div class="col height-400 bg-red"></div>
+                    <div class="col height-800 bg-red">
+                        <div class="testo"></div>
+                    </div>
+                    <div class="col height-400 bg-red">
+                        <div class="img"></div>
+                    </div>
                 </div>
             </div>
         </div>
