[UPD] structure desktop

--- a/index.html
+++ b/index.html
@@ -9,9 +9,20 @@
 <body>
 
     <header>
-        <div class="bg-blue d-flex justify-between">
-            <div>Logo</div>
-            <div>Menu</div>
+        <div class="bg-blue">
+            <div class="container d-flex justify-between">
+                <div class="logo">Logo</div>
+                <div class="menu-mobile">Menu</div>
+                <div class="menu-desktop">
+                    <ul>
+                        <li>Planning</li>
+                        <li>Testimonials</li>
+                        <li>Features</li>
+                        <li>About Us</li>
+                    </ul>
+                    <button>Get started</button>
+                </div>
+            </div>
         </div>
     </header>
 
@@ -32,7 +43,7 @@
         </div>
         <div id="planning" class="bg-violet">
             <div class="container">
-                <div class="row">
+                <div class="row ps-relative">
                     <div class="col bg-white height-800">
                         <div class="strategic-planning height-400"></div>
                     </div>
