--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <title>Responsive Layout</title>
 </head>
@@ -10,17 +11,23 @@
 
     <header>
         <div class="bg-blue">
-            <div class="container d-flex justify-between">
-                <div class="logo">Logo</div>
-                <div class="menu-mobile">Menu</div>
+            <div class="container d-flex justify-between align-center">
+                <div class="logo">
+                    <img src="./assets/img/logo.png" alt="logo">
+                </div>
+                <div class="menu-mobile">
+                    <i class="fas fa-bars"></i>
+                </div>
                 <div class="menu-desktop">
-                    <ul>
-                        <li>Planning</li>
-                        <li>Testimonials</li>
-                        <li>Features</li>
-                        <li>About Us</li>
-                    </ul>
-                    <button>Get started</button>
+                    <div class="d-flex align-center">
+                        <ul>
+                            <li>Planning</li>
+                            <li>Testimonials</li>
+                            <li>Features</li>
+                            <li>About Us</li>
+                        </ul>
+                        <button class="btn">Get started</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -43,11 +50,11 @@
         </div>
         <div id="planning" class="bg-violet">
             <div class="container">
-                <div class="row ps-relative">
+                <div class="row">
                     <div class="col bg-white height-800">
                         <div class="strategic-planning height-400"></div>
                     </div>
-                    <div class="col bg-white height-400">
+                    <div class="col bg-white height-400 align-end">
                         <div class="app-development"></div>
                     </div>
                 </div>
