--- a/index.html
+++ b/index.html
@@ -38,13 +38,38 @@
             <div class="container">
                 <div class="row">
                     <div class="big-col bg-lightblue">
-                        <div class="testo bg-red height-400"></div>
-                        <div class="img bg-red height-400"></div>
+                        <div class="testo">
+                            <h3>Get a demo application</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam laboriosam dolor debitis. Nemo est quas, eius ipsa similique, sit, dolorem voluptas provident non quibusdam inventore vel iste perferendis magni laudantium?</p>
+                            <button class="btn">
+                                <i class="fab fa-apple"></i>
+                                App Store
+                            </button>
+                        </div>
+                        <div class="img">
+                            <img src="./assets/img/phone.png" alt="phone">
+                        </div>
                     </div>
-                    <div class="col bg-lightblue height-400"></div>
-                    <div class="col bg-lightblue height-400"></div>
-                    <div class="col bg-lightblue height-400"></div>
-                    <div class="col bg-lightblue height-400"></div>
+                    <div class="col bg-lightblue">
+                        <i class="fas fa-file-code"></i>
+                        <h3>Clean code</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam laboriosam dolor debitis. Nemo est quas, eius ipsa similique, sit, dolorem voluptas provident non quibusdam inventore vel iste perferendis magni laudantium?</p>
+                    </div>
+                    <div class="col bg-lightblue">
+                        <i class="fas fa-compass-drafting"></i>
+                        <h3>Web Design</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam laboriosam dolor debitis. Nemo est quas, eius ipsa similique, sit, dolorem voluptas provident non quibusdam inventore vel iste perferendis magni laudantium?</p>
+                    </div>
+                    <div class="col bg-lightblue">
+                        <i class="fas fa-laptop-code"></i>
+                        <h3>Development</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam laboriosam dolor debitis. Nemo est quas, eius ipsa similique, sit, dolorem voluptas provident non quibusdam inventore vel iste perferendis magni laudantium?</p>
+                    </div>
+                    <div class="col bg-lightblue">
+                        <i class="fas fa-bullhorn"></i>
+                        <h3>Branding</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam laboriosam dolor debitis. Nemo est quas, eius ipsa similique, sit, dolorem voluptas provident non quibusdam inventore vel iste perferendis magni laudantium?</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -54,7 +79,7 @@
                     <div class="col bg-white height-800">
                         <div class="strategic-planning height-400"></div>
                     </div>
-                    <div class="col bg-white height-400 align-end">
+                    <div class="col bg-white height-400 self-end">
                         <div class="app-development"></div>
                     </div>
                 </div>
