--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="row">
                     <div class="big-col bg-lightblue">
                         <div class="testo">
-                            <h3>Get a demo application</h3>
+                            <h4>Get a demo application</h4>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam laboriosam dolor debitis. Nemo est quas, eius ipsa similique, sit, dolorem voluptas provident non quibusdam inventore vel iste perferendis magni laudantium?</p>
                             <button class="btn">
                                 <i class="fab fa-apple"></i>
@@ -52,22 +52,22 @@
                     </div>
                     <div class="col bg-lightblue">
                         <i class="fas fa-file-code"></i>
-                        <h3>Clean code</h3>
+                        <h4>Clean code</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam laboriosam dolor debitis. Nemo est quas, eius ipsa similique, sit, dolorem voluptas provident non quibusdam inventore vel iste perferendis magni laudantium?</p>
                     </div>
                     <div class="col bg-lightblue">
                         <i class="fas fa-compass-drafting"></i>
-                        <h3>Web Design</h3>
+                        <h4>Web Design</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam laboriosam dolor debitis. Nemo est quas, eius ipsa similique, sit, dolorem voluptas provident non quibusdam inventore vel iste perferendis magni laudantium?</p>
                     </div>
                     <div class="col bg-lightblue">
                         <i class="fas fa-laptop-code"></i>
-                        <h3>Development</h3>
+                        <h4>Development</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam laboriosam dolor debitis. Nemo est quas, eius ipsa similique, sit, dolorem voluptas provident non quibusdam inventore vel iste perferendis magni laudantium?</p>
                     </div>
                     <div class="col bg-lightblue">
                         <i class="fas fa-bullhorn"></i>
-                        <h3>Branding</h3>
+                        <h4>Branding</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam laboriosam dolor debitis. Nemo est quas, eius ipsa similique, sit, dolorem voluptas provident non quibusdam inventore vel iste perferendis magni laudantium?</p>
                     </div>
                 </div>
@@ -76,11 +76,22 @@
         <div id="planning" class="bg-violet">
             <div class="container">
                 <div class="row">
-                    <div class="col bg-white height-800">
-                        <div class="strategic-planning height-400"></div>
+                    <div class="col">
+                        <div class="strategic-planning">
+                            <img src="./assets/img/planning1.png" alt="planning">
+                            <h3>Strategic Planning</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae animi nesciunt optio doloremque accusamus nostrum aspernatur, modi omnis voluptatem iste alias nulla odio quos non nobis, eum harum libero sit!</p>
+                        </div>
                     </div>
-                    <div class="col bg-white height-400 self-end">
-                        <div class="app-development"></div>
+                    <div class="col bg-white self-end">
+                        <div class="app-development">
+                            <img src="./assets/img/planning2.png" alt="planning">
+                            <h4>App Development</h4>
+                            <p><i>Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.</i></p>
+                            <button class="btn">
+                                <i class="fas fa-arrow-down"></i>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
