--- a/index.html
+++ b/index.html
@@ -99,18 +99,37 @@
         <div id="testimonials">
             <div class="container">
                 <div class="row">
-                    <div class="col bg-violet height-600"></div>
-                    <div class="col bg-violet height-600">
-                        <div class="img bg-red"></div>
-                        <div class="testo bg-red"></div>
+                    <div class="col testimonials-intro">
+                        <p>TESTIMONIALS</p>
+                        <h3>We are committed expert partners</h3>
+                        <p>We place huge value on strong relationships and have seen the benefit they bring to our business. <br>Customer feedback is vital in helping us to get it right.</p>
                     </div>
-                    <div class="col bg-violet height-600">
-                        <div class="img bg-red"></div>
-                        <div class="testo bg-red"></div>
+                    <div class="col bg-violet">
+                        <div class="img">
+                            <img src="./assets/img/testimonial1.jpg" alt="testimonial">
+                        </div>
+                        <div class="testo">
+                            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi magnam consequuntur non ullam dolorem quod pariatur! Distinctio voluptatibus sequi porro praesentium! Perspiciatis officiis ipsam molestiae autem voluptate itaque, impedit possimus!"</p>
+                            <p class="name"><strong>NAT RAYNOLDS</strong></p>
+                        </div>
                     </div>
-                    <div class="col bg-violet height-600">
-                        <div class="img bg-red"></div>
-                        <div class="testo bg-red"></div>
+                    <div class="col bg-violet">
+                        <div class="img">
+                            <img src="./assets/img/testimonial2.jpg" alt="testimonial">
+                        </div>
+                        <div class="testo">
+                            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi magnam consequuntur non ullam dolorem quod pariatur! Distinctio voluptatibus sequi porro praesentium! Perspiciatis officiis ipsam molestiae autem voluptate itaque, impedit possimus!"</p>
+                            <p class="name"><strong>CELIA ALMEDA</strong></p>
+                        </div>
+                    </div>
+                    <div class="col bg-violet">
+                        <div class="img">
+                            <img src="./assets/img/testimonial3.jpg" alt="testimonial">
+                        </div>
+                        <div class="testo">
+                            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi magnam consequuntur non ullam dolorem quod pariatur! Distinctio voluptatibus sequi porro praesentium! Perspiciatis officiis ipsam molestiae autem voluptate itaque, impedit possimus!"</p>
+                            <p class="name"><strong>BOB ROBERTS</strong></p>
+                        </div>
                     </div>
                 </div>
             </div>
