[UPD] testimonials + about

--- a/index.html
+++ b/index.html
@@ -105,28 +105,34 @@
                         <p>We place huge value on strong relationships and have seen the benefit they bring to our business. <br>Customer feedback is vital in helping us to get it right.</p>
                     </div>
                     <div class="col bg-violet">
-                        <div class="img">
-                            <img src="./assets/img/testimonial1.jpg" alt="testimonial">
+                        <div class="col-img">
+                            <div class="img">
+                                <img src="./assets/img/testimonial1.jpg" alt="testimonial">
+                            </div>
                         </div>
-                        <div class="testo">
+                        <div class="col-testo">
                             <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi magnam consequuntur non ullam dolorem quod pariatur! Distinctio voluptatibus sequi porro praesentium! Perspiciatis officiis ipsam molestiae autem voluptate itaque, impedit possimus!"</p>
                             <p class="name"><strong>NAT RAYNOLDS</strong></p>
                         </div>
                     </div>
                     <div class="col bg-violet">
-                        <div class="img">
-                            <img src="./assets/img/testimonial2.jpg" alt="testimonial">
+                        <div class="col-img">
+                            <div class="img">
+                                <img src="./assets/img/testimonial2.jpg" alt="testimonial">
+                            </div>
                         </div>
-                        <div class="testo">
+                        <div class="col-testo">
                             <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi magnam consequuntur non ullam dolorem quod pariatur! Distinctio voluptatibus sequi porro praesentium! Perspiciatis officiis ipsam molestiae autem voluptate itaque, impedit possimus!"</p>
                             <p class="name"><strong>CELIA ALMEDA</strong></p>
                         </div>
                     </div>
                     <div class="col bg-violet">
-                        <div class="img">
-                            <img src="./assets/img/testimonial3.jpg" alt="testimonial">
+                        <div class="col-img">
+                            <div class="img">
+                                <img src="./assets/img/testimonial3.jpg" alt="testimonial">
+                            </div>
                         </div>
-                        <div class="testo">
+                        <div class="col-testo">
                             <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi magnam consequuntur non ullam dolorem quod pariatur! Distinctio voluptatibus sequi porro praesentium! Perspiciatis officiis ipsam molestiae autem voluptate itaque, impedit possimus!"</p>
                             <p class="name"><strong>BOB ROBERTS</strong></p>
                         </div>
@@ -138,25 +144,66 @@
             <div class="container">
                 <div class="row">
                     <div class="col-title">
-                        <h3>Benefits</h3>
+                        <h3>Benefits of working with us</h3>
                     </div>
-                    <div class="col bg-white height-400"></div>
-                    <div class="col bg-white height-400"></div>
-                    <div class="col bg-white height-400"></div>
-                    <div class="col bg-white height-400"></div>
-                    <div class="col bg-white height-400"></div>
-                    <div class="col bg-white height-400"></div>
+                    <div class="col bg-white">
+                        <h2>01</h2>
+                        <h4>High Quality</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde optio, beatae tempore architecto aperiam rerum cupiditate non iste iusto reprehenderit. Ut recusandae doloremque quas dolorum quidem nam, quae sapiente dolorem.</p>
+                        <button class="btn"><strong>more</strong></button>
+                    </div>
+                    <div class="col bg-white">
+                        <h2>02</h2>
+                        <h4>Creative Team</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde optio, beatae tempore architecto aperiam rerum cupiditate non iste iusto reprehenderit. Ut recusandae doloremque quas dolorum quidem nam, quae sapiente dolorem.</p>
+                        <button class="btn"><strong>more</strong></button>
+                    </div>
+                    <div class="col bg-white">
+                        <h2>03</h2>
+                        <h4>Amazing Results</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde optio, beatae tempore architecto aperiam rerum cupiditate non iste iusto reprehenderit. Ut recusandae doloremque quas dolorum quidem nam, quae sapiente dolorem.</p>
+                        <button class="btn"><strong>more</strong></button>
+                    </div>
+                    <div class="col bg-white">
+                        <h2>04</h2>
+                        <h4>Best Pricing</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde optio, beatae tempore architecto aperiam rerum cupiditate non iste iusto reprehenderit. Ut recusandae doloremque quas dolorum quidem nam, quae sapiente dolorem.</p>
+                        <button class="btn"><strong>more</strong></button>
+                    </div>
+                    <div class="col bg-white">
+                        <h2>05</h2>
+                        <h4>Innovations</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde optio, beatae tempore architecto aperiam rerum cupiditate non iste iusto reprehenderit. Ut recusandae doloremque quas dolorum quidem nam, quae sapiente dolorem.</p>
+                        <button class="btn"><strong>more</strong></button>
+                    </div>
+                    <div class="col bg-white">
+                        <h2>06</h2>
+                        <h4>24/7 Support</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde optio, beatae tempore architecto aperiam rerum cupiditate non iste iusto reprehenderit. Ut recusandae doloremque quas dolorum quidem nam, quae sapiente dolorem.</p>
+                        <button class="btn"><strong>more</strong></button>
+                    </div>
                 </div>
             </div>
         </div>
         <div id="about">
             <div class="container">
                 <div class="row">
-                    <div class="col height-800 bg-red">
-                        <div class="testo"></div>
+                    <div class="col-testo">
+                        <div class="testo">
+                            <h2>About Us</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae possimus, sapiente, excepturi eveniet aspernatur rem mollitia voluptas reprehenderit est, hic deserunt nisi maxime rerum ullam sequi accusantium atque blanditiis cum?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi minus accusantium nemo, assumenda voluptatum, amet nulla explicabo dolore, possimus mollitia voluptatem perferendis adipisci provident! Eum quia at aspernatur consectetur provident.</p>
+                        </div>
                     </div>
-                    <div class="col height-400 bg-red">
-                        <div class="img"></div>
+                    <div class="col-img">
+                        <div class="img">
+                            <img src="./assets/img/about.jpg" alt="about">
+                        </div>
+                        <h3>I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.</h3>
+                        <button class="btn">
+                            <i class="fab fa-linkedin"></i>
+                            Find me on Linkedin
+                        </button>
                     </div>
                 </div>
             </div>
