[FIX] testimonials images

--- a/index.html
+++ b/index.html
@@ -106,9 +106,7 @@
                     </div>
                     <div class="col bg-violet">
                         <div class="col-img">
-                            <div class="img">
-                                <img src="./assets/img/testimonial1.jpg" alt="testimonial">
-                            </div>
+                            <img src="./assets/img/testimonial1.jpg" alt="testimonial">
                         </div>
                         <div class="col-testo">
                             <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi magnam consequuntur non ullam dolorem quod pariatur! Distinctio voluptatibus sequi porro praesentium! Perspiciatis officiis ipsam molestiae autem voluptate itaque, impedit possimus!"</p>
@@ -117,9 +115,7 @@
                     </div>
                     <div class="col bg-violet">
                         <div class="col-img">
-                            <div class="img">
-                                <img src="./assets/img/testimonial2.jpg" alt="testimonial">
-                            </div>
+                            <img src="./assets/img/testimonial2.jpg" alt="testimonial">
                         </div>
                         <div class="col-testo">
                             <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi magnam consequuntur non ullam dolorem quod pariatur! Distinctio voluptatibus sequi porro praesentium! Perspiciatis officiis ipsam molestiae autem voluptate itaque, impedit possimus!"</p>
@@ -128,9 +124,7 @@
                     </div>
                     <div class="col bg-violet">
                         <div class="col-img">
-                            <div class="img">
-                                <img src="./assets/img/testimonial3.jpg" alt="testimonial">
-                            </div>
+                            <img src="./assets/img/testimonial3.jpg" alt="testimonial">
                         </div>
                         <div class="col-testo">
                             <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi magnam consequuntur non ullam dolorem quod pariatur! Distinctio voluptatibus sequi porro praesentium! Perspiciatis officiis ipsam molestiae autem voluptate itaque, impedit possimus!"</p>
@@ -211,7 +205,9 @@
         <div id="get-started" class="bg-violet">
             <div class="sm-container">
                 <div class="row">
-                    <div class="col bg-white height-800"></div>
+                    <div class="col bg-white height-800">
+                        
+                    </div>
                 </div>
             </div>
         </div>
