--- a/index.html
+++ b/index.html
@@ -205,8 +205,19 @@
         <div id="get-started" class="bg-violet">
             <div class="sm-container">
                 <div class="row">
-                    <div class="col bg-white height-800">
-                        
+                    <div class="col">
+                        <p>GET STARTED</p>
+                        <h3>Simple, Transparent Pricing</h3>
+                        <h2 class="free">It's Free!</h2>
+                        <p>We're still in beta and we will be for a while. <br>As we add more functionality, we'll look into other plans with more control.</p>
+                        <button class="btn"><strong>Get Started</strong></button>
+                        <p class="small">
+                            Copyright 2021 Boolean
+                            <i class="fas fa-circle"></i>
+                            Classe XX
+                            <i class="fas fa-circle"></i>
+                            Privacy policy
+                        </p>
                     </div>
                 </div>
             </div>
