--- a/index.html
+++ b/index.html
@@ -227,7 +227,10 @@
     <footer class="bg-gray">
         <div class="sm-container">
             <div class="row">
-                <div class="col bg-white height-600"></div>
+                <div class="col">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio neque maxime perferendis consequatur? Magnam, facilis nesciunt dolorum inventore fuga atque? Ut repudiandae corporis soluta mollitia, facilis iusto impedit perspiciatis tempore.</p>
+                    <p><span class="violet">Lorem ipsum</span> dolor sit amet consectetur. <br><span class="violet">Boolean Careers</span></p>
+                </div>
             </div>
         </div>
     </footer>
