--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                             <img src="./assets/img/testimonial1.jpg" alt="testimonial">
                         </div>
                         <div class="col-testo">
-                            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi magnam consequuntur non ullam dolorem quod pariatur! Distinctio voluptatibus sequi porro praesentium! Perspiciatis officiis ipsam molestiae autem voluptate itaque, impedit possimus!"</p>
-                            <p class="name"><strong>NAT RAYNOLDS</strong></p>
+                            <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi magnam consequuntur non ullam dolorem quod pariatur! Distinctio voluptatibus sequi porro praesentium! Perspiciatis officiis ipsam molestiae autem voluptate itaque, impedit possimus! <i class="fas fa-quote-right"></i></p>
+                            <p class="name"><strong>Nat Raynolds</strong></p>
                         </div>
                     </div>
                     <div class="col bg-violet">
@@ -118,8 +118,8 @@
                             <img src="./assets/img/testimonial2.jpg" alt="testimonial">
                         </div>
                         <div class="col-testo">
-                            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi magnam consequuntur non ullam dolorem quod pariatur! Distinctio voluptatibus sequi porro praesentium! Perspiciatis officiis ipsam molestiae autem voluptate itaque, impedit possimus!"</p>
-                            <p class="name"><strong>CELIA ALMEDA</strong></p>
+                            <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi magnam consequuntur non ullam dolorem quod pariatur! Distinctio voluptatibus sequi porro praesentium! Perspiciatis officiis ipsam molestiae autem voluptate itaque, impedit possimus! <i class="fas fa-quote-right"></i></p>
+                            <p class="name"><strong>Celia Almeda</strong></p>
                         </div>
                     </div>
                     <div class="col bg-violet">
@@ -127,8 +127,8 @@
                             <img src="./assets/img/testimonial3.jpg" alt="testimonial">
                         </div>
                         <div class="col-testo">
-                            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi magnam consequuntur non ullam dolorem quod pariatur! Distinctio voluptatibus sequi porro praesentium! Perspiciatis officiis ipsam molestiae autem voluptate itaque, impedit possimus!"</p>
-                            <p class="name"><strong>BOB ROBERTS</strong></p>
+                            <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi magnam consequuntur non ullam dolorem quod pariatur! Distinctio voluptatibus sequi porro praesentium! Perspiciatis officiis ipsam molestiae autem voluptate itaque, impedit possimus! <i class="fas fa-quote-right"></i></p>
+                            <p class="name"><strong>Bob Roberts</strong></p>
                         </div>
                     </div>
                 </div>
@@ -192,6 +192,7 @@
                     <div class="col-img">
                         <div class="img">
                             <img src="./assets/img/about.jpg" alt="about">
+                            <i class="fas fa-quote-left"></i>
                         </div>
                         <h3>I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.</h3>
                         <button class="btn">
@@ -216,7 +217,7 @@
                             <i class="fas fa-circle"></i>
                             Classe XX
                             <i class="fas fa-circle"></i>
-                            Privacy policy
+                            <a href="#" class="privacy">Privacy policy</a> 
                         </p>
                     </div>
                 </div>
@@ -229,7 +230,7 @@
             <div class="row">
                 <div class="col">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio neque maxime perferendis consequatur? Magnam, facilis nesciunt dolorum inventore fuga atque? Ut repudiandae corporis soluta mollitia, facilis iusto impedit perspiciatis tempore.</p>
-                    <p><span class="violet">Lorem ipsum</span> dolor sit amet consectetur. <br><span class="violet">Boolean Careers</span></p>
+                    <p><a href="#" class="boolean">Lorem ipsum</a> dolor sit amet consectetur. <br><a href="#" class="boolean">Boolean Careers</a></p>
                 </div>
             </div>
         </div>
